--- a/source/assets/scss/views/products.scss
+++ b/source/assets/scss/views/products.scss
@@ -14,25 +14,28 @@
 // custom stuff
 .platform-art-1 { // pair with container-x bg image fill classes
     position: absolute;
-    top: 12rem;
-    height: 100%;
+    top: 1rem;
+    height: 50%; // fallback
+    height: calc(3rem + 40vw);
+    right: -28%;
+    width: 100%;
+    opacity: 0.2;
     @include breakpoint (medium) {
-        right: -50%;
-        width: 90%;
+        opacity: 1;
     }
-    @include breakpoint (large) {
-        right: -28%;
-        width: 76%;
-    }
-    @include breakpoint (xlarge) {
-        right: -10%;
-        width: 62%;
-    }
-    @include breakpoint (xxlarge) {
-        right: -14%;
-        width: 62%;
-    }
-}
+//     @include breakpoint (large) {
+//         right: -28%;
+//         width: 76%;
+//     }
+//     @include breakpoint (xlarge) {
+//         right: -10%;
+//         width: 62%;
+//     }
+//     @include breakpoint (xxlarge) {
+//         right: -14%;
+//         width: 62%;
+//     }
+// }
 // .icon-columns-left-group {
 //     .column, .columns {
 //         margin-bottom: 1.5rem;
@@ -46,6 +49,7 @@
 //         margin-right: 1rem;
 //     }
 // }
+}
 $color: $color_blue;
 .solid {
   fill: $color;
