--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -20,6 +20,7 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
       path d=("M4.29 5.19L2.83 6.64 9 12.81l6.17-6.17-1.46-1.45L9 9.9z")
 
 .container-color--dark-grad-blue
+  / .container-image--right(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/16drHKsNBa6qqEWGim0QmS/cc517223d26050d05659db9f5fab8785/k8-arch-diagram-1-dark.png, medium]")
   section#platform-top.section-article.position-relative(style="overflow: hidden;")
     / .row
     /   .columns.small-12
@@ -27,43 +28,41 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
     .row.group
       .columns.small-12.medium-7.large-6.xlarge-6
         h2.headline-3 Compliant Kubernetes Service is how regulated industries work with cloud native architectures.
+        = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button button--light", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
 
-    .menu.button-cluster.align-center.z-stack-10
-      = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button button--light", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
-      /= partial "partials/snippets/button", :locals => { :label => "Explore Compliance", :title => "Explore Compliance", :url => "/compliance", :button_classes => "button button--light", :icon => "icon-shield-solid-small", :item_id => "top-tech" }
-    .platform-art-1.container-image--top(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/16drHKsNBa6qqEWGim0QmS/cc517223d26050d05659db9f5fab8785/k8-arch-diagram-1-dark.png, medium]")
-
-
+    / .menu.button-cluster.align-center
+    .platform-art-1.container-image--top.z-stack-0(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/16drHKsNBa6qqEWGim0QmS/cc517223d26050d05659db9f5fab8785/k8-arch-diagram-1-dark.png, medium]")
 
 section#setup.section-article.container-gray-12
   .row.align-center
-    .columns.small-12.medium-10.large-8.group.text-center
+    .columns.small-12.medium-10.large-10.group.text-center
       h3.headline-5.spaced-out The Datica promise brought to a Kubernetes service
       h2.headline-2 Datica bridges security and compliance with Kubernetes to offer an enterprise-grade cloud native solution.
       p.lead If you're working within a regulated industry like healthcare, you have almost zero options when it comes to using Kubernetes — either you manage the control plane, the operating system and the underlying infrastructure to maintain the flexibility required for compliance, or you risk falling out of compliance by using an existing managed service. Datica changes all of that.
-  .row.align-center.small-up-1.medium-up-2.large-up-4.group
-    .column
-      / h4.headline-4.hide-for-medium 1. Setup
-      img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/yc639CSDwka8aAs4Uo0kW/cb3458e6089ae9bd7312389acc374f9b/setup-1.png?w=450" alt="Setup"
+  .row.align-center.group
+    .column.small-12.medium-6.large-5
+      / img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/yc639CSDwka8aAs4Uo0kW/cb3458e6089ae9bd7312389acc374f9b/setup-1.png?w=450" alt="Setup"
       p CKS is a compliant managed Kubernetes service for regulated industries. In addition to managing the cluster control plane, CKS also configures the underlying operating system, configures the underlying instances — and installs, configures and manages a set of deployments required to achieve compliance.
-    .column
-      / h4.headline-4.hide-for-medium 2. Installation
-      img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
+    .column.small-12.medium-6.large-5
+      / img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
       p Deployments include logging, monitoring, intrusion detection, antivirus software, and more. In addition to the technical configuration, Datica assumes the liability for the complete stack within our BAA, something not available or possible with any other managed Kubernetes offering. CKS delivers a compliant managed Kubernetes service that functions like any other Kubernetes cluster, but one that comes pre-configured for compliance and security out of the box.
 
-  .row.align-center
-    .columns.small-12.medium-8.large-5.xlarge-4
-      .card.drop
-        = partial("partials/ctas/card-schedule-demo")
+  / .row.align-center
+  /   .columns.small-12.medium-8.large-5.xlarge-4
+  /     .card.drop
+  /       = partial("partials/ctas/card-schedule-demo")
 
-section#features.section-article
+section#features.section-article.container-gray-11
   - ordered_feature_categories = data.site.featureCategories.to_a.sort_by{ |id, featureCat| featureCat['sort_order'] }
   - ordered_feature_categories.each do | id, featureCat |
     .row
       .columns.small-12
         .callout.callout--large.drop.group--2x
           .row
-            .columns.small-12.medium-8
+            - if featureCat.has_key?("icon_slug")
+              .columns.small-12.medium-4.large-2.text-right
+                = inline_svg(featureCat.icon_slug, :class => "icon-size--xlarge svg-color--blue")
+            .columns.small-12.medium-8.large-10
               h3.headline-3(id="featureCat_#{featureCat.slug}") #{featureCat["title"]}
               - if featureCat.has_key?("desc")
                 p = featureCat["desc"]
@@ -87,61 +86,76 @@ section#features.section-article
                   - if feature.has_key?("desc")
                     .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
                       = Kramdown::Document.new(feature.desc).to_html
-
+  .row.align-center.align-middle
+    .columns.small-6.text-right
+      h3.headline-5.spaced-out Talk to our experts today
+    .columns.small-6
+      = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
 
 section#setup.section-article.container-gray-2
   .row.align-center
-    .columns.small-12
-      .row.align-center
-        .columns.small-12.medium-10.large-9.group.text-center
-          / h3.headline-5.spaced-out Leverage the power of Kubernetes
-          h2.headline-2 Datica's shared responsibility model
-          p.lead With Datica’s Cloud Compliance Management System, we ensure both the cluster and the underlying infrastructure on your cloud account are secure and compliant to the highest standards across an ever-growing list of frameworks and regimes.
-      .row.align-center
-        .columns.small-12.large-8
-          img src="https://images.ctfassets.net/189dvqdsjh46/2HRXBAtQrSga8OuaMgYc22/fa77a259452d4c7dc5d77a0a45db31e1/shared-resp-1-dark.svg" alt="Shared Responsibility"
-        .columns.small-12.large-12
-          img src="https://images.ctfassets.net/189dvqdsjh46/28YL53F8qMaumKQ0IA4sEW/ab55b40593c253f782e383c164ae6715/shared-resp-2-dark.svg" alt="Shared Responsibility Diagram"
-
-
-  // .row.align-center
-  //   - data.views.platform.shared_responsibility.each do | block |
-  //     .columns.small-12.medium-4
-  //       = Kramdown::Document.new(block).to_html
-
-// .container-image--fixed.container-gray-2
-//   .container-image--center(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/qDYJLe7zyKsaU6OoGCSWg/55fed65d63a33a39b690697200a0d5b2/bg-rects-blue-dark.png?w=2400&h=1200&fit=thumb&fm=jpg&q=80, medium]")
-//     section#platform-aws.section-article
-//       .row.align-middle.align-center
-//         .columns.small-12.medium-8
-//           h2.headline-3.text-center.group
-//             | You wouldn't build payment processing infrastructure to charge credit cards.
-//             br/
-//             | You'd use Stripe.
-//
-//       .row.align-center.align-middle
-//         .columns.small-12.medium-6.medium-large-4
-//           img.hide-for-medium.float-right.group width="150" alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
-//           p.lead.group <strong>So why waste money and take on unnecessary risk building your own compliance layer?</strong>
-//           p Datica is an <strong>Amazon Web Services Advanced Tier Technology Partner</strong> with a <strong>Healthcare Competency</strong> focus.
-//         .columns.small-12.medium-4.medium-large-4
-//           img.logo-size--xlarge.group.show-for-medium alt=("apn tech") src="https://d1.awsstatic.com/partner-network/APN-Advanced-Technology-Badge.d737de9106285590a46875b8805247f22f8433ba.png"
-//           .group
-//             = partial "partials/snippets/button",  :locals => { :label => "Explore Datica on AWS", :title => "Explore Datica on AWS", :url => "/aws", :button_classes => "button button--light group", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "aws" }
-
-// section.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
-//   = partial "partials/section-promos/hcms-screenshot"
-
-/ aside#ctaBottom.container-color--dark-grad-blue
-/   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
-/     .row.align-center
-/       .columns.small-12.medium-10.large-10.text-center
-/         h2.headline-3.group <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
-/         .menu.button-cluster.align-center
-/           = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
-/           = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right" }
-section.section-article.container-gray-11
+    .columns.small-12.medium-10.large-9.group.text-center
+      / h3.headline-5.spaced-out Leverage the power of Kubernetes
+      h2.headline-2 Datica's shared responsibility model
+      p.lead With Datica’s Cloud Compliance Management System, we ensure both the cluster and the underlying infrastructure on your cloud account are secure and compliant to the highest standards across an ever-growing list of frameworks and regimes.
   .row.align-center
+    .columns.small-12.large-8
+      img src="https://images.ctfassets.net/189dvqdsjh46/2HRXBAtQrSga8OuaMgYc22/fa77a259452d4c7dc5d77a0a45db31e1/shared-resp-1-dark.svg" alt="Shared Responsibility"
+    .columns.small-12.large-12
+      img src="https://images.ctfassets.net/189dvqdsjh46/28YL53F8qMaumKQ0IA4sEW/ab55b40593c253f782e383c164ae6715/shared-resp-2-dark.svg" alt="Shared Responsibility Diagram"
+  .row.align-center
+    .columns.text-center
+      = partial "partials/snippets/button", :locals => { :label => "Learn more about Compliance", :title => "Read more", :url => "/compliance/", :button_classes => "button button--light", :icon => "icon-shield-solid-small", :icon_align => "left", :item_id => "shared-responsibility", :data_track_group => "compliance" }
+
+section.section-article.container-gray-11
+  .row.align-center.group
     .columns.small-12
-      h2.headline-2 Customer Success
-  = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
+      h2.headline-2.text-center Customer Success
+  .row.group
+    .columns.small-12.medium-6
+      script async="" src="https://fast.wistia.com/embed/medias/djywh7kkgd.jsonp" 
+      script async="" src="https://fast.wistia.com/assets/external/E-v1.js" 
+      .wistia_responsive_padding style=("padding:56.25% 0 0 0;position:relative;") 
+        .wistia_responsive_wrapper style="height:100%;left:0;position:absolute;top:0;width:100%;" 
+          span.wistia_embed.wistia_async_djywh7kkgd class=("popover=true popoverAnimateThumbnail=true videoFoam=true") style="display:inline-block;height:100%;width:100%"   
+    .columns.small-12.medium-6
+      .group
+        blockquote.quote--serif
+          - the_quote = data.site.quotes["5fDbO1XJ1CAEWAEIoiO6mS"]
+          = Kramdown::Document.new(the_quote["quote_body"]).to_html
+          / a href="/customer/methodist-lebonheur-healthcare" title="MLH Case Study" data_track_group="case-study"
+          / | Get the Case Study 
+          / - inline_svg("small/icon-download", :class => "icon-inline")
+        = partial("partials/snippets/person", :locals => { :p => the_quote.customer, :company => the_quote.customer.company_name } )
+  .group.text-center
+    = partial "partials/snippets/button", :locals => { :label => "Get the Case Study", :url => "/customer/methodist-lebonheur-healthcare", :button_classes => "button secondary", :icon => "icon-download", :icon_align => "right", :data_track_group => "case-study" }
+  
+  .row.align-center
+    .columns.small-12.text-center.group
+      h2.headline-3 A shared vision for the future of healthcare
+  .row.align-center.small-up-1.medium-up-2.large-up-3
+    // search by customer slug, must match CF slug strings
+    - sorted_customers = data.site.customers.to_a.select { |id, cust| (cust["slug"] == "zipnosis" || cust["slug"] == "cordata" || cust["slug"] == "metabahn" ) }
+    - sorted_customers.each do |id, cf_customer|
+      .column
+        = partial "/partials/content/card-case-study",  :locals => { :cf_customer => cf_customer } 
+
+section#cta.section-article.container-color--gray-dark-grad
+  .row.align-center.align-middle
+    .columns.small-12.medium-6.large-5
+      h2.headline-3.group--2x Schedule a conversation to learn more about Datica Compliant Kubernetes Service.
+      / = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => "container-color--tint-50 " })
+      .callout.callout--dark-alpha
+        blockquote.quote--serif
+          | The Datica team is helping us solve critical infrastructure and scaling problems faster and more competently than we can in-house.
+        .media-object.card-person
+          .media-object-section
+            img.avatar.avatar--large.circle alt=("Jon Pearce") src="https://images.ctfassets.net/189dvqdsjh46/6IUA5I8suWEWI28YcIkMgm/134af76338fd572e45a9d4a716a8ddb7/headshot-zipnosis.jpg" /
+          .media-object-section.main-section.align-self-middle
+            h4.person-name Jon Pearce
+            p.person-title CEO, Zipnosis
+    #form.columns.small-12.medium-large-6.large-4
+      .callout.drop.form-embed
+        - the_form = data.site.forms['7bcj6s0e7mc0a2iowoOmIS']
+        / h3.headline-4.text-center.group Talk to our experts today to discuss your integration challenges.
+        = Kramdown::Document.new(the_form["custom_form"]).to_html
