--- a/source/partials/section-promos/_dhsf-video.erb
+++ b/source/partials/section-promos/_dhsf-video.erb
@@ -5,7 +5,8 @@
     <div class="row<% if defined?(align) && align == "right" %> align-right<% end %>">
         <div class="columns small-12 medium-6">
             <div class="callout callout--blue callout--large drop text-center-for-small">
-                <h3 class="headline-3 group">How can the <strong>Digital Health Success Framework</strong> help you?</h3>
+                <h3 class="headline-3">Help your startup <strong>navigate regulation.</strong></h3>
+                <p>The <strong>Digital Health Success Framework</strong> is a simple guide for the makers of digital healthcare products.</p>
                 <a href="/dhsf" class="button button--light" title="See how the Digital Health System Framework can help you.">Explore the framework <i class="fa fa-angle-right"></i></a>
             </div>
         </div>
