--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -33,15 +33,13 @@ section#compliance-top.container-color--dark-alt style=("background-color: #2327
           h3.headline-4 If you are big…
           p Large organizations are hesitant to migrate to AWS or Azure because they are concerned compliance requirements aren't being met. When they can't be sure, they stick with old infrastructure.
           h3.headline-4 If you are new…
-          p Emerging digital products can't break through to their enterprise customers unless they demonstrate compliance and security credibility from Day 1. Compliance is central to the business model.
+          p Emerging digital products can't break through to their enterprise customers unless they demonstrate compliance and security credibility from Day One. Compliance is central to the business model.
         .columns.small-12.medium-6.large-4
           = inline_svg_art("source/assets/img/art/k8-continuous-compliance.svg", class: "svg-color--white")
           h3.headline-4 Datica solves your problem
-          p The Datica Platform allows development flexibility via Kubernetes<sup>&reg;</sup> while providing a prescriptive compliance and security layer on top.
-          p.lead With Datica, any technology team can manage compliance on the cloud, giving organizations the assurances they need to adopt the benefits of the cloud.
+          p Datica’s array of products and services allow development flexibility while providing prescriptive compliance and security built in. With Datica, any technology team can manage compliance on the cloud, giving organizations the assurances they need to adopt the benefits of the cloud.
       .menu.button-cluster.align-center
-        = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo/", :button_classes => "button hollow-inverted", :item_id => "cta_top-demo", :icon => "icon-event-check", :icon_color => "white", :icon_align => "left" }
-        = partial "partials/snippets/button", :locals => { :label => "Hear from our Customers", :title => "Hear from our Customers", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_top-customers" }
+        = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "/demo/", :button_classes => "button hollow-inverted", :item_id => "cta_top-demo", :icon => "icon-event-check", :icon_align => "left" }
 
 section#compliance-shared-responsibility.section-article.container-gray-2
   .row.group.align-center
