--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -41,9 +41,11 @@ section#setup.section-article.container-gray-12
       p.lead If you're working within a regulated industry like healthcare, you have almost zero options when it comes to using Kubernetes — either you manage the control plane, the operating system and the underlying infrastructure to maintain the flexibility required for compliance, or you risk falling out of compliance by using an existing managed service. Datica changes all of that.
   .row.align-center.group
     .column.small-12.medium-6.large-5
+      h3.headline-4 Complete Kubernetes compliance
       / img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/yc639CSDwka8aAs4Uo0kW/cb3458e6089ae9bd7312389acc374f9b/setup-1.png?w=450" alt="Setup"
       p CKS is a compliant managed Kubernetes service for regulated industries. In addition to managing the cluster control plane, CKS also configures the underlying operating system, configures the underlying instances — and installs, configures and manages a set of deployments required to achieve compliance.
     .column.small-12.medium-6.large-5
+      h3.headline-4 The most secure Kubernetes cluster available
       / img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
       p Deployments include logging, monitoring, intrusion detection, antivirus software, and more. In addition to the technical configuration, Datica assumes the liability for the complete stack within our BAA, something not available or possible with any other managed Kubernetes offering. CKS delivers a compliant managed Kubernetes service that functions like any other Kubernetes cluster, but one that comes pre-configured for compliance and security out of the box.
 
