--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -28,7 +28,7 @@ priority: "1.0"
                   h4.headline-5 
                     = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--green-glow")
                     | Product Subscription
-                  p CKS subscription is per production Kubernetes cluster. Currently available on AWS. You pay infrastructure costs, like EC2 and S3, directly to AWS because because we install the cluster onto your existing AWS account.
+                  p CKS subscription is per production Kubernetes cluster. Currently available on AWS. You pay infrastructure costs, like EC2 and S3, directly to AWS because we install the cluster onto your existing AWS account.
                   h4.headline-5 
                     = inline_svg("small/icon-check-circle", class: "icon-inline icon-left svg-color--green-glow") 
                     | Optional Compliance Services (Optional)
